<resources>
    <string name="app_name">GidiTestJava</string>
    <string name="action_settings">Settings</string>
    <string name="temp_unit">C</string>
    <string name="wind_speed">Wind speed</string>
    <string name="dew_point">Pressure</string>
    <string name="indoor_temp">Indoor temp</string>
    <string name="humidity">Humidity</string>
    <string name="search_text">Enter name of City</string>
    <string name="this_week_header">Next six days</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
