<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingStart="16dip"
    android:paddingEnd="16dip"
    android:background="@color/darkBackground"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:ignore="PrivateResource"
    tools:context=".ui.fragment.WeatherFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/searchView"
        android:layout_width="0dip"
        android:layout_height="48dip"
        android:layout_marginTop="16dip"
        app:cardBackgroundColor="@color/lightDarkBackground"
        app:cardCornerRadius="8dip"
        app:cardElevation="2dip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/searchEntry"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="8dip"
            android:fontFamily="@font/san_fransisco_thin"
            android:hint="@string/search_text"
            android:inputType="textCapWords"
            android:imeOptions="actionSearch"
            android:singleLine="true"
            android:maxLines="1"
            android:padding="8dip"
            android:textColor="@color/blackText"
            android:textColorHint="@color/whiteText"
            tools:ignore="AutoFill" />
    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="0dip"
        android:layout_height="0dip"
        android:paddingBottom="40dip"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/todayCard"
                app:cardBackgroundColor="@color/lightDarkBackground"
                android:layout_width="0dip"
                android:layout_height="300dip"
                android:layout_marginTop="12dip"
                app:cardCornerRadius="5dip"
                app:cardElevation="4dip"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/currentLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dip">

                    <TextView
                        android:id="@+id/todaysDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/whiteText"
                        android:textSize="15sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="May 2, 2019" />

                    <TextView
                        android:id="@+id/location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dip"
                        android:textColor="@color/blackText"
                        android:textSize="17sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/todaysDate"
                        tools:text="Ikeja, NG" />

                    <TextView
                        android:id="@+id/todaysTemp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/san_fransisco_regular"
                        android:textStyle="bold"
                        android:textColor="@color/whiteText"
                        android:textSize="72sp"

                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/location"
                        tools:text="29°" />


                    <ImageView
                        android:id="@+id/todayWeatherImage"
                        android:layout_width="90dip"
                        android:layout_height="90dip"
                        android:layout_marginEnd="8dip"
                        android:layout_marginBottom="40dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="ContentDescription"
                        tools:src="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/weatherDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dip"
                        android:textColor="@color/blackText"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toEndOf="@+id/todayWeatherImage"
                        app:layout_constraintStart_toStartOf="@+id/todayWeatherImage"
                        app:layout_constraintTop_toBottomOf="@+id/todayWeatherImage"
                        tools:text="Overcast" />

                    <TextView
                        android:id="@+id/minMaxTemp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/san_fransisco_regular"
                        android:textColor="@color/whiteText"
                        android:textSize="13sp"
                        app:layout_constraintEnd_toEndOf="@+id/weatherDesc"
                        app:layout_constraintStart_toStartOf="@+id/weatherDesc"
                        app:layout_constraintTop_toBottomOf="@+id/weatherDesc"
                        tools:text="26°/32°" />

                    <TextView
                        android:id="@+id/todaysHumidity"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textColor="@color/blackText"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toTopOf="@+id/todaysHumidityIndicator"
                        app:layout_constraintEnd_toStartOf="@+id/indoorTemp"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:text="27%" />

                    <TextView
                        android:id="@+id/indoorTemp"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textColor="@color/blackText"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toTopOf="@+id/indoorTempIndicator"
                        app:layout_constraintEnd_toStartOf="@+id/windSpeed"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintStart_toEndOf="@+id/todaysHumidity"
                        tools:text="26°" />

                    <TextView
                        android:id="@+id/windSpeed"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textColor="@color/blackText"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toTopOf="@+id/windSpeedIndicator"
                        app:layout_constraintEnd_toStartOf="@+id/dewPoint"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintStart_toEndOf="@+id/indoorTemp"
                        tools:text="1.5 km" />

                    <TextView
                        android:id="@+id/dewPoint"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textColor="@color/blackText"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toTopOf="@+id/dewPointIndicator"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintStart_toEndOf="@+id/windSpeed"
                        tools:text="26°" />

                    <TextView
                        android:id="@+id/todaysHumidityIndicator"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/humidity"
                        android:textAlignment="center"
                        android:textColor="@color/whiteText"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/indoorTempIndicator"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/indoorTempIndicator"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/indoor_temp"
                        android:textAlignment="center"
                        android:textColor="@color/whiteText"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/windSpeedIndicator"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintStart_toEndOf="@+id/todaysHumidityIndicator" />

                    <TextView
                        android:id="@+id/windSpeedIndicator"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/wind_speed"
                        android:textAlignment="center"
                        android:textColor="@color/whiteText"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/dewPointIndicator"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintStart_toEndOf="@+id/indoorTempIndicator" />

                    <TextView
                        android:id="@+id/dewPointIndicator"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/dew_point"
                        android:textAlignment="center"
                        android:textColor="@color/whiteText"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintStart_toEndOf="@+id/windSpeedIndicator" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <ProgressBar
                    android:id="@+id/currentProgress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_gravity="center" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/thisWeek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dip"
                android:fontFamily="@font/san_fransisco_regular"
                android:textStyle="bold"
                android:text="@string/this_week_header"
                android:textColor="@color/blackText"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/todayCard" />

            <ProgressBar
                android:id="@+id/forecastProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="145dip"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/thisWeek"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/forecastList"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/thisWeek"
                tools:listitem="@layout/forecast_list_item" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>